Fix input and submit button not aligning in Safari.

--- a/website-guts/assets/css/pages/index.scss
+++ b/website-guts/assets/css/pages/index.scss
@@ -37,7 +37,7 @@ body.home-page {
         display: block;
         width: 100%;
         z-index: 1;
-        margin-top: 105px;
+        margin-top: 220px;
         top: 50%;
         transform: translateY(-75%);
       }
@@ -53,7 +53,7 @@ body.home-page {
       box-shadow: 0px -2px 55px rgba(44,89,148,0.82);
       border: 1px solid #214e82;
       padding: 16px;
-      width: 670px;
+      width: 671px;
       margin: 0 auto;
       overflow: hidden;
       box-sizing: border-box;
